Fixed layout bug where the container was being cut off and by the navigation footer and didn't scroll properly.

--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -1,4 +1,5 @@
 .container {
-  height: calc(100vh - 6rem);
+  height: calc(100vh - 2.5rem);
   padding: 2rem;
+  overflow: scroll;
 }
